# Warehousing

./: .gitignore  CMakeLists.txt  CustomButton.qml  Data.cpp  Data.h  Good.h  Goods.qml  Main.qml  MainWindow.h  MainWindow.ui  main.cpp  main.qml  resources.qrc  test.qmlproject
Data/: CMakeLists.txt  Data.cpp  Data.h
QML/: Answer.qml  Categories.qml  CreateGoods.qml  CustomButton.qml  CustomTextArea.qml  DropDownMenu.qml  Goods.qml  Main.qml  MainPage.qml  MenuButton.qml  Page1.qml  SuppliersPage.qml  SuppliesPage.qml  WaitingScreen.qml
content/: App.qml  CMakeLists.txt  Categories.qml  CreateGoods.qml  CustomButton.qml  CustomTextArea.qml  Goods.qml  GridGoods.qml  MainPage.qml  SuppliersPage.qml  SuppliesPage.qml  WaitingScreen.qml
include/: CMakeLists.txt  Suppliers.h
source/: CMakeLists.txt  Suppliers.cpp  main.cpp
src/: Data.cpp  Data.h  main.cpp
